[package]
name = "vulkano-rust-gpu-bug"
version = "0.1.0"
authors = ["p0lunin <dmytro.polunin@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "shader"
]

[dependencies]
vulkano-shaders = "0.20.0"

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu.git", branch = "main" }
