[package]
name = "shader"
version = "0.1.0"
authors = ["p0lunin <dmytro.polunin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["dylib"]

[dependencies]
spirv-std = { path = "D:\\Rust\\rust-gpu\\crates\\spirv-std" }
spirv-std-macros = { git = "https://github.com/EmbarkStudios/rust-gpu.git", branch = "main" }